--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,9 @@
     }
   },
   "rules": {
+    "react/prefer-stateless-function": "off",
+    "arrow-body-style":"off",
+    "linebreak-style": "off",
     "no-use-before-define": 0,
     "no-param-reassign": 0,
     "no-console": 1,
