--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --open",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:api-server": "NODE_PATH=. node ./bin/www",
-    "start:api-scott": "node ./bin/www"
+    "start:api-server": "NODE_PATH=. nodemon ./bin/www",
+    "start:api-scott": "nodemon ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-hot-loader": "^3.0.0-beta.7",
+    "react-hot-loader": "^3.1.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
@@ -55,6 +55,7 @@
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "html-webpack-template": "^5.6.0",
+    "nodemon": "^1.12.1",
     "path": "^0.12.7",
     "redux-devtools": "^3.4.0",
     "source-map-loader": "^0.2.2",
