--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     }
   },
   "rules": {
+    "no-trailing-spaces": "off",
     "no-mixed-operators":"off",
     "no-shadow":"off",
     "react/prefer-stateless-function": "off",
