--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     }
   },
   "rules": {
+    "func-names": "off",
     "curly": "off",
     "jsx-a11y/label-has-for": "off",
     "no-trailing-spaces": "off",
