--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/MJ-JS/visaid#readme",
   "dependencies": {
     "axios": "^0.17.0",
+    "crypto": "^1.0.1",
     "es6-promise": "^4.1.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
@@ -32,6 +33,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "request": "^2.83.0",
     "style-loader": "^0.19.0"
   },
   "devDependencies": {
@@ -45,8 +47,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "clean-webpack-plugin": "^0.1.17",
+    "config": "^1.27.0",
     "css-loader": "^0.28.7",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.1.0",
